[gd_scene load_steps=3 format=2]

[ext_resource path="res://Worker.gd" type="Script" id=1]
[ext_resource path="res://slacker.png" type="Texture" id=2]

[node name="Worker" type="Node2D"]
position = Vector2( 60, 30 )
script = ExtResource( 1 )

[node name="WorkerTexture" type="TextureButton" parent="."]
margin_right = 32.0
margin_bottom = 32.0
hint_tooltip = "Worker"
action_mode = 0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )

[node name="DiscretionalIncome" type="Label" parent="."]
margin_left = -20.0
margin_top = -20.0
margin_right = 30.0
hint_tooltip = "Discretional income"
text = "0$"
align = 2
valign = 1

[node name="IncomeLabel" type="Label" parent="."]
margin_left = -50.0
margin_bottom = 20.0
hint_tooltip = "Income"
text = "0$"
align = 2
valign = 1

[node name="RentExpLabel" type="Label" parent="."]
margin_top = 32.0
margin_right = 30.0
margin_bottom = 46.0
hint_tooltip = "Rental expenses"
text = "0$"
align = 2
valign = 1

[node name="CommutingExpLabel" type="Label" parent="."]
margin_top = 50.0
margin_right = 30.0
margin_bottom = 64.0
hint_tooltip = "Commuting expenses"
text = "0$"
align = 2
valign = 1

[node name="TimerUpdateLabels" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="TimerAct" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="NameLabel" type="Label" parent="."]
margin_left = -40.0
margin_top = 20.0
margin_bottom = 34.0
text = "name"
align = 2
valign = 1
[connection signal="pressed" from="WorkerTexture" to="." method="_on_WorkerTexture_pressed"]
[connection signal="timeout" from="TimerUpdateLabels" to="." method="_on_TimerUpdateLabels_timeout"]
[connection signal="timeout" from="TimerAct" to="." method="_on_TimerAct_timeout"]
